--- a/R03-01-Rot-Order-statistics-selection-environment/pom.xml
+++ b/R03-01-Rot-Order-statistics-selection-environment/pom.xml
@@ -65,9 +65,9 @@
 						</goals>
 						<configuration>
 							<!-- insira sua matricula -->
-							<matricula>121110520</matricula>
+							<matricula>INSIRA SEU NUMERO DE MATRICULA</matricula>
 							<!-- insira o ID correto da atividade e a turma -->
-							<roteiro>R02-01</roteiro>
+							<roteiro>R0X-0X</roteiro>
 							<!-- NÃO MODIFIQUE AS TAGS ABAIXO -->
 							<semestre>2025.2</semestre>
 							<url>http://150.165.85.97/submitAtividade</url>
